# DgRender2D

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
doc/: Doxyfile
lib/: CMakeLists.txt  camera.cpp  camera.h  dgrender2d.h  freecamera.cpp  freecamera.h  mesh.cpp  mesh.h  transformnode.cpp  transformnode.h
sketches/normal_map_generation/: normal_map.m
